# qig

./: Cargo.toml  README.md
.cursor/rules/: integration-priorities.mdc  ops-safety.mdc  tekne-stack.mdc
.github/: settings.yml
.github/workflows/: ci.yml
examples/: README.md  bures_manifold.rs  bures_wasserstein.rs  classical_quantum_divergences.rs  flow_on_states.rs  random_density_matrices.rs
src/: lib.rs
