[package]
name = "qig"
version = "0.1.0"
edition = "2021"
authors = ["Arc <attobop@gmail.com>"]
description = "Quantum information geometry primitives: fidelity, Bures distance, relative entropy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/qig"
documentation = "https://docs.rs/qig"
keywords = ["quantum", "information-geometry", "fidelity", "bures", "relative-entropy"]
categories = ["algorithms", "science", "mathematics"]

[workspace]

[dependencies]
thiserror = "2.0"
faer = { version = "0.19", features = ["std"] }
num-complex = "0.4"

[dev-dependencies]
proptest = "1.5"
rand = "0.9"
rand_distr = "0.5"
logp = "0.2"
infogeom = { version = "0.2", features = ["manifold"] }
skel = "0.1"
flowmatch = "0.1"
ndarray = "0.16"
rmt = "0.1"
